# fa-dae2-capstone

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  DATA_MODELING_PLAN.md  DATA_SOURCES.md  DIMENSIONAL_MODELING_PLAN.md  NETWORK_ARCHITECTURE.md  README.md  SETUP_BATCH_DAG.md  airflow-docker-compose.yml  capstone_design.md  capstone_implementation_plan.md  cli_commands.md  docker-compose.yml  kafka-docker-compose.yml  pyproject.toml  requirements.txt  sf_conn.py
.dbt/: profiles.yml
.github/workflows/: pr_ci.yml
ai_agent/: README.md  __init__.py  main.py  test_agent.py
ai_agent/agent/: __init__.py  nodes.py  state.py  tools.py
ai_agent/config/: __init__.py  settings.py
ai_agent/connectors/: __init__.py  pinecone_connector.py  snowflake_connector.py
ai_agent/utils/: __init__.py  pdf_processor.py
ai_agents/smart_hybrid_agent/: test_agent.py
airflow/: test_snowflake_connection.py
airflow/config/: airflow.cfg
config/: airflow.cfg
consumers/: kafka_to_postgres.py
dbt_sf/: README.md  dbt_project.yml
infra/: Dockerfile.airflow  Dockerfile.consumer  Dockerfile.producer  dev.compose.yml
kafka/: README.md  kafka_producer_faker.py  kafka_to_postgres.py
loaders/: csv_to_snowflake.py  generate_monthly.py
producers/: kafka_producer_faker.py
scripts/: README_CLEANUP.md  cleanup_all_data.py  generate_monthly_data.py  generate_monthly_transaction_csv.py  setup_airflow_connections.sh  setup_airflow_postgres_connection.sh  setup_airflow_snowflake_connection.sh  setup_postgres_connection.sh  sf_conn.py  snowflake_bootstrap_batch_ingestion.sql
snowflake/: bootstrap_batch_ingestion.sql  bootstrap_transactions.sql
utils/: snowflake_conn.py
(+50 files in other folders)
