[project]
name = "fa-dae2-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "psycopg[binary]~=3.2",
    "polars>=1.2",
    "snowflake-connector-python~=3.16",
    "faker>=25",
    "confluent-kafka~=2.4",
]
